# live-chain-defense-soc

./: .gitignore  README.md
dev/: PRODUCTION_CHECKLIST.md  README.md  SETUP_WORKFLOW.md  pyproject.toml
dev/data/: pending_events.jsonl  reorg_events.jsonl  sample_events.jsonl
dev/scripts/: start_local.sh
dev/src/live_chain_defense/: __init__.py  app.py  config.py  models.py  pipeline.py  security.py  store.py
dev/src/live_chain_defense/detection/: risk_engine.py  rules.py
dev/src/live_chain_defense/feedback/: __init__.py  learning.py
dev/src/live_chain_defense/intelligence/: campaigns.py  entities.py  graph.py
dev/src/live_chain_defense/ops/: __init__.py  slo.py
dev/src/live_chain_defense/response/: executor.py  guardrails.py  notifier.py  playbooks.py  relay.py
dev/src/live_chain_defense/simulation/: __init__.py  backtesting.py
dev/src/live_chain_defense/stream/: mempool.py  replay.py  simulator.py
dev/src/live_chain_defense/web/: app.js  index.html  styles.css
dev/tests/: test_app_security.py  test_campaigns.py  test_feedback_ops.py  test_graph.py  test_notifications.py  test_pipeline_preconfirm.py  test_replay_and_mempool.py  test_risk_engine.py
research/: 01-problem-framing.md  02-threat-model.md  03-detection-research.md  04-response-research.md  05-roadmap.md  06-preconfirmation-defense.md  07-resilience-ops.md  08-feedback-backtesting.md  09-client-site-guide.md  README.md
